--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -11,5 +11,14 @@ database:
     version: "10.11"
 use_dns_when_possible: true
 composer_version: "2"
-web_environment: []
 corepack_enable: true
+working_dir:
+  web: "/var/www/html/web/modules/contrib/canvas"
+nodejs_version: "20"
+web_environment:
+  - VITE_SERVER_ORIGIN=https://${DDEV_HOSTNAME}:5174
+web_extra_exposed_ports:
+  - name: vite-dev-server
+    container_port: 5173
+    http_port: 5173
+    https_port: 5174
