--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
     },
     "require": {
         "composer/installers": "^2.3",
+        "drupal/ai_agents": "^1.1",
+        "drupal/ai_provider_openai": "^1.1",
         "drupal/canvas": "1.x-dev",
         "drupal/core-composer-scaffold": "^11.2",
         "drupal/core-project-message": "^11.2",
