--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,11 @@
         "drupal/ai_provider_openai": "^1.1",
         "drupal/canvas": "1.x-dev",
         "drupal/core-composer-scaffold": "^11.2",
+        "drupal/core-dev": "^11.2",
         "drupal/core-project-message": "^11.2",
         "drupal/core-recipe-unpack": "^11.2",
         "drupal/core-recommended": "^11.2",
+        "drupal/simple_oauth": "^6.0",
         "drush/drush": "^13.6"
     },
     "conflict": {
@@ -37,13 +39,14 @@
     "config": {
         "allow-plugins": {
             "composer/installers": true,
-            "drupal/core-composer-scaffold": true,
-            "drupal/core-recipe-unpack": true,
-            "drupal/core-project-message": true,
-            "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
+            "drupal/core-composer-scaffold": true,
+            "drupal/core-project-message": true,
+            "drupal/core-recipe-unpack": true,
             "php-http/discovery": true,
-            "php-tuf/composer-integration": true
+            "php-tuf/composer-integration": true,
+            "phpstan/extension-installer": true,
+            "tbachert/spi": true
         },
         "sort-packages": true
     },
