feat(ddev:config): add post-start hook

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -69,3 +69,10 @@ web_extra_exposed_ports:
     container_port: 6080
     http_port: 6080
     https_port: 6081
+hooks:
+  post-start:
+    - exec-host: ddev clone-repo
+    - exec-host: ddev composer install
+    - exec-host: ddev site-install
+    - exec-host: ddev launch
+    - exec-host: ddev ui --install --build
