--- a/composer.json
+++ b/composer.json
@@ -1,97 +1,100 @@
 {
-    "name": "balintbrews/drupal-canvas-dev",
-    "description": "An opinionated development environment for brewing Drupal Canvas.",
-    "type": "project",
-    "license": "GPL-2.0-or-later",
-    "homepage": "https://github.com/balintbrews/drupal-canvas-dev",
-    "support": {
-        "docs": "https://github.com/balintbrews/drupal-canvas-dev#readme",
-        "chat": "https://drupal.org/slack"
+  "name": "balintbrews/drupal-canvas-dev",
+  "description": "An opinionated development environment for brewing Drupal Canvas.",
+  "type": "project",
+  "license": "GPL-2.0-or-later",
+  "homepage": "https://github.com/balintbrews/drupal-canvas-dev",
+  "support": {
+    "docs": "https://github.com/balintbrews/drupal-canvas-dev#readme",
+    "chat": "https://drupal.org/slack"
+  },
+  "repositories": {
+    "canvas": {
+      "type": "path",
+      "url": "web/modules/contrib/canvas"
     },
-    "repositories": {
-        "canvas": {
-            "type": "path",
-            "url": "web/modules/contrib/canvas"
-        },
-        "drupal": {
-            "type": "composer",
-            "url": "https://packages.drupal.org/8"
-        }
-    },
-    "require": {
-        "composer/installers": "^2.3",
-        "drupal/ai_agents": "^1.1",
-        "drupal/ai_provider_openai": "^1.1",
-        "drupal/canvas": "1.x-dev",
-        "drupal/core-composer-scaffold": "^11.2",
-        "drupal/core-dev": "^11.2",
-        "drupal/core-project-message": "^11.2",
-        "drupal/core-recipe-unpack": "^11.2",
-        "drupal/core-recommended": "^11.2",
-        "drupal/simple_oauth": "^6.0",
-        "drush/drush": "^13.6"
-    },
-    "conflict": {
-        "drupal/drupal": "*"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "allow-plugins": {
-            "composer/installers": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true,
-            "drupal/core-composer-scaffold": true,
-            "drupal/core-project-message": true,
-            "drupal/core-recipe-unpack": true,
-            "php-http/discovery": true,
-            "php-tuf/composer-integration": true,
-            "phpstan/extension-installer": true,
-            "tbachert/spi": true
-        },
-        "sort-packages": true
-    },
-    "scripts": {
-        "pre-install-cmd": [
-            "./scripts/check-repo.sh"
-        ]
-    },
-    "extra": {
-        "drupal-scaffold": {
-            "locations": {
-                "web-root": "web/"
-            }
-        },
-        "installer-paths": {
-            "web/core": [
-                "type:drupal-core"
-            ],
-            "web/libraries/{$name}": [
-                "type:drupal-library"
-            ],
-            "web/modules/contrib/{$name}": [
-                "type:drupal-module"
-            ],
-            "web/profiles/contrib/{$name}": [
-                "type:drupal-profile"
-            ],
-            "web/themes/contrib/{$name}": [
-                "type:drupal-theme"
-            ],
-            "drush/Commands/contrib/{$name}": [
-                "type:drupal-drush"
-            ],
-            "web/modules/custom/{$name}": [
-                "type:drupal-custom-module"
-            ],
-            "web/profiles/custom/{$name}": [
-                "type:drupal-custom-profile"
-            ],
-            "web/themes/custom/{$name}": [
-                "type:drupal-custom-theme"
-            ],
-            "recipes/{$name}": [
-                "type:drupal-recipe"
-            ]
-        }
+    "drupal": {
+      "type": "composer",
+      "url": "https://packages.drupal.org/8"
     }
+  },
+  "require": {
+    "composer/installers": "^2.3",
+    "drupal/ai_agents": "^1.1",
+    "drupal/ai_provider_openai": "^1.1",
+    "drupal/canvas": "1.x-dev",
+    "drupal/core-composer-scaffold": "^11.2",
+    "drupal/core-dev": "^11.2",
+    "drupal/core-project-message": "^11.2",
+    "drupal/core-recipe-unpack": "^11.2",
+    "drupal/core-recommended": "^11.2",
+    "drupal/simple_oauth": "^6.0",
+    "drush/drush": "^13.6"
+  },
+  "require-dev": {
+    "drupal/default_content": "^2.0@alpha"
+  },
+  "conflict": {
+    "drupal/drupal": "*"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "drupal/core-composer-scaffold": true,
+      "drupal/core-project-message": true,
+      "drupal/core-recipe-unpack": true,
+      "php-http/discovery": true,
+      "php-tuf/composer-integration": true,
+      "phpstan/extension-installer": true,
+      "tbachert/spi": true
+    },
+    "sort-packages": true
+  },
+  "scripts": {
+    "pre-install-cmd": [
+      "./scripts/check-repo.sh"
+    ]
+  },
+  "extra": {
+    "drupal-scaffold": {
+      "locations": {
+        "web-root": "web/"
+      }
+    },
+    "installer-paths": {
+      "web/core": [
+        "type:drupal-core"
+      ],
+      "web/libraries/{$name}": [
+        "type:drupal-library"
+      ],
+      "web/modules/contrib/{$name}": [
+        "type:drupal-module"
+      ],
+      "web/profiles/contrib/{$name}": [
+        "type:drupal-profile"
+      ],
+      "web/themes/contrib/{$name}": [
+        "type:drupal-theme"
+      ],
+      "drush/Commands/contrib/{$name}": [
+        "type:drupal-drush"
+      ],
+      "web/modules/custom/{$name}": [
+        "type:drupal-custom-module"
+      ],
+      "web/profiles/custom/{$name}": [
+        "type:drupal-custom-profile"
+      ],
+      "web/themes/custom/{$name}": [
+        "type:drupal-custom-theme"
+      ],
+      "recipes/{$name}": [
+        "type:drupal-recipe"
+      ]
+    }
+  }
 }
