fix(recipes:canvas_dev_oauth): move config import to right recipe

--- a/recipes/canvas_dev_oauth/recipe.yml
+++ b/recipes/canvas_dev_oauth/recipe.yml
@@ -5,6 +5,8 @@ install:
   - simple_oauth
   - consumers
 config:
+  import:
+    canvas_oauth: "*"
   actions:
     simple_oauth.settings:
       simpleConfigUpdate:
