--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,15 @@
     "drush/drush": "^13.6"
   },
   "require-dev": {
-    "drupal/default_content": "^2.0@alpha"
+    "devizzent/cebe-php-openapi": "^1.1.4",
+    "drupal/default_content": "^2.0@alpha",
+    "drupal/metatag": "^2.",
+    "jangregor/phpstan-prophecy": "^2.2.0",
+    "league/openapi-psr7-validator": "^0.22.0",
+    "mglaman/phpstan-drupal": "^2.0.9",
+    "phpstan/phpstan": "^2.1.17",
+    "phpstan/phpstan-phpunit": "^2.0.7",
+    "webflo/drupal-finder": "^1.3.1"
   },
   "conflict": {
     "drupal/drupal": "*"
