feat(commands:si): install ai_agents_test

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
   "require": {
     "composer/installers": "^2.3",
     "drupal/ai_agents": "^1.1",
+    "drupal/ai_agents_test": "^1.0@alpha",
     "drupal/ai_provider_openai": "^1.1",
     "drupal/canvas": "1.x-dev",
     "drupal/core-composer-scaffold": "^11.2",
