--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,14 @@
     "drupal/ai_agents_test": "^1.0@alpha",
     "drupal/ai_provider_openai": "^1.1",
     "drupal/canvas": "^1.0@rc",
+    "drupal/canvas_extjs": "dev-1.x",
     "drupal/core-composer-scaffold": "^11.2",
     "drupal/core-dev": "^11.2",
     "drupal/core-project-message": "^11.2",
     "drupal/core-recipe-unpack": "^11.2",
     "drupal/core-recommended": "^11.2",
+    "drupal/custom_elements": "^3.2",
+    "drupal/lupus_decoupled": "^1.3",
     "drupal/simple_oauth": "^6.0",
     "drush/drush": "^13.6"
   },
